--- a/scss/modules/layout/_mixins.scss
+++ b/scss/modules/layout/_mixins.scss
@@ -59,12 +59,9 @@
     $top: false,
     $bottom: false,
     $left: false,
-    $right: false,
-    $extend: true
+    $right: false
 ) {
-    @if $extend {
-        @extend %position-absolute;
-    }
+    position: absolute;
 
     $transform-list: null;
 
