--- a/scss/modules/forms/_exports.scss
+++ b/scss/modules/forms/_exports.scss
@@ -4,20 +4,7 @@
 
 @include export('input') {
     textarea,
-    input[type="text"],
-    input[type="password"],
-    input[type="datetime"],
-    input[type="datetime-local"],
-    input[type="date"],
-    input[type="month"],
-    input[type="time"],
-    input[type="week"],
-    input[type="number"],
-    input[type="email"],
-    input[type="url"],
-    input[type="search"],
-    input[type="tel"],
-    input[type="color"] {
+    input:not[type="radio"]:not[type="checkbox"]:not[type="button"]:not[type="submit"] {
     	@extend %input;
 
         @include style('input');
