Input cleanup quickfix

--- a/scss/modules/forms/_exports.scss
+++ b/scss/modules/forms/_exports.scss
@@ -4,7 +4,7 @@
 
 @include export('input') {
     textarea,
-    input:not[type="radio"]:not[type="checkbox"]:not[type="button"]:not[type="submit"] {
+    input:not([type="radio"]):not([type="checkbox"]):not([type="button"]):not([type="submit"]) {
     	@extend %input;
 
         @include style('input');
