Adding define and component mixins, renaming $components to $imports (to be semantic and to prevent conflicts)

--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -9,6 +9,7 @@
 
 /* Import Settings */
 @import
+    'global/_module',
     'settings/_functions',
     'settings/_settings',
     'settings/_helpers';
