--- a/scss/modules/global/_module.scss
+++ b/scss/modules/global/_module.scss
@@ -4,7 +4,7 @@
 
 // Global Settings
 $environment: development !default;
-$components: 'all' !default;
+$imports: 'all' !default;
 
 // Asset Settings
 $base-asset-path: '../bower_components' !default;
